cluster/apps/default/home-assistant/home-assistant-hytta.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: home-assistant-hytta
  namespace: default
spec:
  ports:
    - name: home-assistant-hytta
      protocol: TCP
      targetPort: 8123
      port: 8123
    - name: ha-code-hytta
      protocol: TCP
      targetPort: 8080
      port: 8080
  selector:
    app: home-assistant-hytta
  type: ClusterIP

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
    external-dns/is-public: "true"
    hajimari.io/enable: "true"
    hajimari.io/icon: "home-assistant"
    nginx.org/websocket-services: home-assistant-hytta
  name: home-assistant-hytta
  namespace: default
spec:
  rules:
    - host: hytta.j-burg11.dev
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: home-assistant-hytta
                port:
                  number: 8123
  tls:
    - hosts:
        - hytta.j-burg11.dev
      secretName: hytta-tls-prod

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
    external-dns/is-public: "true"
    hajimari.io/enable: "true"
    hajimari.io/icon: "code-tags"
  name: hytta-code
  namespace: default
spec:
  rules:
    - host: hytta-code.j-burg11.dev
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: home-assistant-hytta
                port:
                  number: 8080
  tls:
    - hosts:
        - hytta-code.j-burg11.dev
      secretName: hytta-code-tls-prod

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-assistant-hytta
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: home-assistant-hytta
  template:
    metadata:
      labels:
        app: home-assistant-hytta
    spec:
      containers:
        - name: home-assistant
          image: homeassistant/home-assistant:2023.1.7
          imagePullPolicy: Always
          volumeMounts:
            - mountPath: /config
              name: home-assistant-hytta-volume
          securityContext:
            runAsUser: 0
        - name: ha-code
          image: codercom/code-server:latest
          imagePullPolicy: Always
          args:
            - '--port=8080'
            - '--extensions-dir=/config/.vscode'
            - '--user-data-dir=/config/.vscode'
            - /config
          workingDir: /config
          volumeMounts:
            - mountPath: /config
              name: home-assistant-hytta-volume
          securityContext:
            runAsUser: 0
        - name: mysql
          image: mysql:latest
          volumeMounts:
            - name: home-assistant-hytta-mysql-volume
              mountPath: /var/lib/mysql
      volumes:
        - name: home-assistant-hytta-volume
          persistentVolumeClaim:
            claimName: home-assistant-hytta-pvc
        - name: home-assistant-hytta-mysql-volume
          persistentVolumeClaim:
            claimName: home-assistant-hytta-mysql-pvc
